@@ -1,0 +1,28 @@
+==================================
+   Test of conversion functions
+==================================
+v = [-4 -3.5 -3 -2.5 -2 -1.5 -1 -0.5 0 0.5 1 1.5 2 2.5 3 3.5 4 4.5 5 5.5 5.29747 -32.6146 -0.953277 -19.0363 17.2935 -2.8927 -21.1341 10.1955 -4.96176 -28.0492]
+
+round(v) = [-4 -4 -3 -2 -2 -2 -1 0 0 0 1 2 2 2 3 4 4 4 5 6 5 -33 -1 -19 17 -3 -21 10 -5 -28]
+round_i(v) = [-4 -4 -3 -2 -2 -2 -1 0 0 0 1 2 2 2 3 4 4 4 5 6 5 -33 -1 -19 17 -3 -21 10 -5 -28]
+
+ceil(v) = [-4 -3 -3 -2 -2 -1 -1 0 0 1 1 2 2 3 3 4 4 5 5 6 6 -32 0 -19 18 -2 -21 11 -4 -28]
+ceil_i(v) = [-4 -3 -3 -2 -2 -1 -1 0 0 1 1 2 2 3 3 4 4 5 5 6 6 -32 0 -19 18 -2 -21 11 -4 -28]
+
+floor(v) = [-4 -4 -3 -3 -2 -2 -1 -1 0 0 1 1 2 2 3 3 4 4 5 5 5 -33 -1 -20 17 -3 -22 10 -5 -29]
+floor_i(v) = [-4 -4 -3 -3 -2 -2 -1 -1 0 0 1 1 2 2 3 3 4 4 5 5 5 -33 -1 -20 17 -3 -22 10 -5 -29]
+
+b = [0 1 1 1 1 1 1 1 1 0 0 0 0 1 0]
+
+bin2dec(b) = 16322
+dec2bin(bin2dec(b)) = [1 1 1 1 1 1 1 1 0 0 0 0 1 0]
+bin2dec(b, false) = 8702
+dec2bin(bin2dec(b, false), false) = [0 1 1 1 1 1 1 1 1 0 0 0 0 1]
+
+bin2oct(b) = [3 7 7 0 2]
+oct2bin(bin2oct(b)) = [1 1 1 1 1 1 1 1 0 0 0 0 1 0]
+oct2bin(bin2oct(b), 1) = [0 1 1 1 1 1 1 1 1 0 0 0 0 1 0]
+
+bin2pol(b) = [1 -1 -1 -1 -1 -1 -1 -1 -1 1 1 1 1 -1 1]
+pol2bin(bin2pol(b)) = [0 1 1 1 1 1 1 1 1 0 0 0 0 1 0]
+
